--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -82,10 +82,12 @@ In Project 1, we are tasked to study various regressions methods, such as Ordina
 
 The Franke Function is given on the form
 
+%\begin{equation}
 \begin{align*}
-  f(x,y) &= \frac{3}{4}\exp{\left(-\frac{(9x-2)^2}{4} - \frac{(9y-2)^2}{4}\right)}+\frac{3}{4}\exp{\left(-\frac{(9x+1)^2}{49}- \frac{(9y+1)}{10}\right)} \\
-  &+\frac{1}{2}\exp{\left(-\frac{(9x-7)^2}{4} - \frac{(9y-3)^2}{4}\right)} -\frac{1}{5}\exp{\left(-(9x-4)^2 - (9y-7)^2\right) }
+f(x,y) &= \frac{3}{4}\exp{\left(-\frac{(9x-2)^2}{4} - \frac{(9y-2)^2}{4}\right)}+\frac{3}{4}\exp{\left(-\frac{(9x+1)^2}{49}- \frac{(9y+1)}{10}\right)} \\
+&+\frac{1}{2}\exp{\left(-\frac{(9x-7)^2}{4} - \frac{(9y-3)^2}{4}\right)} -\frac{1}{5}\exp{\left(-(9x-4)^2 - (9y-7)^2\right) }
 \end{align*}
+%\end{equation}
 
 with a 3-dimensional plot given in Figure \ref{fig:1}
 
@@ -95,16 +97,16 @@ with a 3-dimensional plot given in Figure \ref{fig:1}
   \caption{\label{fig:1}Plot of the Franke Function}
 \end{figure}
 
-\section*{Theory}
-The sample mean value of $\boldsymbol{y}$ is defined as;
-\begin{equation}
-    \bar{y} =  \frac{1}{n} \sum_{i=0}^{n - 1} y_i
-\end{equation}
+%\section*{Theory}
+%The sample mean value of $\boldsymbol{y}$ is defined as;
+%\begin{equation}
+%    \bar{y} =  \frac{1}{n} \sum_{i=0}^{n - 1} y_i
+%\end{equation}
 
-The sample variance of $\boldsymbol{y}$ is defined as;
-\begin{equation}
-    \mathrm{var}[\boldsymbol{x}]=\frac{1}{n}\sum_{i=0}^{n-1}(x_i- \overline{x})^2=\mathbb{E}\left[(\bm{y}-\bm{\tilde{y}})^2\right]
-\end{equation}
+%The sample variance of $\boldsymbol{y}$ is defined as;
+%\begin{equation}
+%    \mathrm{var}[\boldsymbol{x}]=\frac{1}{n}\sum_{i=0}^{n-1}(x_i- \overline{x})^2=\mathbb{E}\left[(\bm{y}-\bm{\tilde{y}})^2\right]
+%\end{equation}
 
 \section*{Exercise 1}
 In Machine Learning, we are studying the problem of optimization, that is, finding the optimal parameter $\beta$ such that $C(\boldsymbol{X},\boldsymbol{\beta}) = 
@@ -163,19 +165,20 @@ The R2 score (coefficient of determination) is another metric that can be relate
 
 \textbf{TODO} Possibly more one implementation
 
-\subsection*{Some words on Scaling}
-Our motivation for scaling the data arise in the context of fitting a design matrix of predictors with different units. To avoid having to disregard some predictors in favor of others based on their unit, not necessarily their contribution to the function fit, a scaling of the data is performed. By scaling the data using one of several scaling techniques, we ensure that all predictors lie in the same reference domain, resulting in a more accurate representation of the predictors. SciKit-learn includes several different Scalers, such as the StandardScaler and MinMaxScaler. \cite{scikit-learn} For this discussion, the StandardScaler will be inspected.
+\subsection*{Scaling the data}
+Our motivation for scaling the data arise in the context of fitting a design matrix of predictors with different units. To avoid having to disregard some predictors in favor of others based on their unit, not necessarily their contribution to the function fit, a scaling of the data is performed. By scaling the data using one of several scaling techniques, we ensure that all predictors lie in the same reference domain, resulting in a more accurate representation of the predictors. Furthermore, scaled data generally increases model skill. SciKit-learn includes several different Scalers, such as the StandardScaler and MinMaxScaler. \cite{scikit-learn} For this discussion, the StandardScaler will be inspected.
 
-The idea behind scaling the data with regards to the StandardScaler method, is to subtract the mean value for each column from the same column in the design matrix. This process is what is known as zero centering. Moreover, when scaling in this way, the intercept will be scaled by the mean value of the output. Moreover, it can be shown that zero centering leads to the new $\bm{\tilde{y}} = \bm{y} - \beta_0 = \bm{y} - \bm{\bar{y}}$, where $\bm{\bar{y}}$ is used as the sample mean of $\bm{y}$. As the columns of $\bm{X}$ also has been scaled in the same fashion, we end up the following Cost-Function
-\[
-  C(\boldsymbol{\beta}) = (\boldsymbol{\tilde{y}} - \tilde{X}\boldsymbol{\beta})^T(\boldsymbol{\tilde{y}} - \tilde{X}\boldsymbol{\beta}).  
-\]
+The idea behind scaling the data with regards to the StandardScaler method, is to subtract the mean value and then divide by the variance. By performing these two operations, we ensure that the data have a mean value equal to $0$ (i.e. are standardized/zero centered) and variance equal to $1$. 
+%Moreover, when scaling in this way, the intercept will be scaled by the mean value of the output. Moreover, it can be shown that zero centering leads to the new $\bm{\tilde{y}} = \bm{y} - \beta_0 = \bm{y} - \bm{\bar{y}}$, where $\bm{\bar{y}}$ is used as the sample mean of $\bm{y}$. As the columns of $\bm{X}$ also has been scaled in the same fashion, we end up the following Cost-Function
+%\[
+%  C(\boldsymbol{\beta}) = (\boldsymbol{\tilde{y}} - \tilde{X}\boldsymbol{\beta})^T(\boldsymbol{\tilde{y}} - \tilde{X}\boldsymbol{\beta}).  
+%\]
 
-Before scaling the dataset, an assessment of how to deal with the intercept has to be made. For reference, the intercept is defined as the first column of the design matrix, and for a polynomial fit would represent where the function intercepts with the y-axis when all other features are set to zero. Moreover, the intercept is a constant value (1), thus zero centering the intercept would result in a singular matrix, rendering the optimization problem unsolvable. Throughout this assignment, we are going to readd the intercept after scaling, essentially leaving the intercept untouched as to avoid any singular matrices. Moreover, for ordinary least squares regression, as there is no regularization of the predictors during the model fit, a model fitted on scaled contra unscaled data would attain the same mean squared error.
+Before scaling the dataset, an assessment of how to deal with the intercept has to be made. For reference, the intercept is defined as the first column of the design matrix, and for a polynomial fit would represent where the function intercepts with the y-axis when all other features are set to zero. Moreover, the intercept is a constant value (for our design matrices equal to 1), thus zero centering the intercept would result in a singular matrix, rendering the optimization problem unsolvable. Throughout this assignment, we are going to readd the intercept after scaling, essentially leaving the intercept untouched as to avoid any singular matrices. Moreover, for ordinary least squares regression, as there is no regularization of the predictors during the model fit, a model fitted on scaled contra unscaled data would attain the same mean squared error.
 
 However, other regression methods such as Ridge and Lasso, which will be discussed in greater detail in further sections, have a dependance on the intercept through the hyperparamter $\lambda$ when computing their regularization term. Not including the intercept when computing the regularization term would give rise to a divergence between the mean square error for the model scaled with compared to the model scaled without the intercept. Thus, by computing the regularization term with disregard to the intercept, the first $\beta_j$ i.e. that of the intercept will be skipped in the computation. This will in most cases lead to a better mean square error for both Ridge and Lasso regression. Skipping the intercept when computing the regularization term also follows the definition of Ridge regression as in. \cite{Geron2019}
 
-Furthermore, while on the topic of Ridge and Lasso regression, scaling of the data should always be performed. This is due to the regularized linear models such as Ridge and Lasso being sensitive to the scale of the input features. \cite{Geron2019}
+Furthermore, while on the topic of Ridge and Lasso regression, a scaling of the data should always be performed. This is due to the regularized linear models such as Ridge and Lasso being sensitive to the scale of the input features. \cite{Geron2019}
 
 To determine whether scaling is apropriate for the current problem, that being fitting the Franke Function using oridnary least squares, an inspection of the generated data is made in light of the just discussion. For Exercise 1, the datapoints $x,y \in \left[0,1\right]$. This would indicate that the data is already scaled to a unit reference system. Moreover, as we are training a model based on the ordinary least squares, there is no dependance on scale of the input features as for regularized linear models. However, for consistency with further models, the data will be scaled with respect to the training data. However, the target variables however will not be scaled.
 
@@ -191,13 +194,11 @@ With our Ordinary Least Squares model implemented as described above, we start o
 
 \begin{lstlisting}
   np.random.seed(4155)
-  n = 100
+  n = 100 # The number of points in direction for the Franke Function
   x = np.sort(np.random.uniform(0, 1, n))
   y = np.sort(np.random.uniform(0, 1, n))
   x, y = np.meshgrid(x,y)
-  z = FrankeFunction(x, y) 
-  noise = 0.5 * np.random.randn(n,n)
-  z += noise
+  z = FrankeFunction(x, y) + noise_factor(n,factor=0.05)
 \end{lstlisting}
 
 For this initial run, we are interested in studying the least squares fit of the Franke Function up to the fifth order. 
@@ -205,16 +206,35 @@ For this initial run, we are interested in studying the least squares fit of the
 \begin{figure}[h]
   \centering
   \includegraphics[scale=0.5]{figures/EX1_franke_function_OLS_evaluate_fit_1.pdf}
-  \caption{\label{fig:OLS_franke_1} Benchmark run with degree up to the fifth order of our OLS implementation compared to the similar LinearRegression() from SciKit-learn}
+  \caption{\label{fig:OLS_franke_1} Benchmark run of the Franke Function fit with added Gaussian noise (factor of 0.05) with degree up to the fifth order of our OLS implementation compared to the similar LinearRegression() from SciKit-learn}
 \end{figure}
 
-By inspecting Figure (\ref{fig:OLS_franke_1}), we can see that there are no visual differences between our implementation of OLS compared to the SciKit-learn implementation. Moreover, there seem to a reduction in MSE as model complexity increases. The Confidence Interval for the predictors $\beta_j$ is constructed for the fit using up to fifth order polynomials. As the predictors are based not only of the x and y parameters in isolation, but also their interaction terms, a fifth order fitted model includes 21 different predictors. The result of computing the Confidence Interval for the 21 different predictors can be seen in Figure \ref{fig:OLS_beta_1}. Note that the predictors  From Figure \ref{fig:OLS_beta_1}, it can be seen that the lowermost and higher order terms have the smallest confidence intervals. Leaving the predictors of order 3 and 4 with a higher uncertainty.
+By inspecting Figure (\ref{fig:OLS_franke_1}), we can see that there are no visual differences between our implementation of OLS compared to the SciKit-learn implementation. Moreover, there is a reduction in MSE as model complexity increases. Thus it is clear that a higher order fit of the model results in a lower error when predicting new values using the test data.
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.5]{figures/EX1_franke_function_OLS_evaluate_fit_dn.pdf}
+  \caption{\label{fig:OLS_franke_2} Benchmark run with doubled the amount of added Gaussian noise (factor 0f 0.1) of our OLS implementation to the similar LinearRegression() from SciKit-learn}
+\end{figure}
+
+Comparing Figure (\ref{fig:OLS_franke_1}) and (\ref{fig:OLS_franke_2}), where the first figure features half the amount of added noise compared to the second figure, there are two things of note. Firstly, Figure (\ref{fig:OLS_franke_1}) attains an overall lower MSE, even as the order of the fitted function increases. Secondly, the initial difference between the train and test MSE is greater for Figure (\ref{fig:OLS_franke_2}) than for Figure (\ref{fig:OLS_franke_1}), though the difference converges to zero for higher order fits in both figures. As such, we make a preliminary conclusion that fitting functions with a higher amount of added Gaussian noise is more difficult than for smooth "predictable" functions. 
+
+The Confidence Interval for the predictors $\beta_j$ is constructed for the fit using up to fifth order polynomials. As the predictors are based not only of the x and y parameters in isolation, but also their interaction terms, a fifth order fitted model includes 21 different predictors. The result of computing the Confidence Interval for the 21 different predictors can be seen in Figure \ref{fig:OLS_beta_1}. Note that the predictors  From Figure \ref{fig:OLS_beta_1}, it can be seen that the lowermost and higher order terms have the smallest confidence intervals. Thus some of the predictors related to x and y of the third and fourth order pose the highest uncertainty. 
 
 \begin{figure}
   \centering
   \includegraphics[scale=.85]{figures/EX1_OLS_beta_error_degree5.pdf}
-  \caption{\label{fig:OLS_beta_1} 95\% Confidence intervals for the predictors of an OLS model with polynomials up to the fifth order.}
+  \caption{\label{fig:OLS_beta_1} 95\% Confidence intervals for the predictors of an OLS model with polynomials up to the fifth order and added Gaussian noise multiplied with a factor of 0.05.}
 \end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=.85]{figures/EX1_OLS_beta_error_degree5_dn.pdf}
+  \caption{\label{fig:OLS_beta_2} 95\% Confidence intervals for the predictors of an OLS model with polynomials up to the fifth order and added Gaussian noise multiplied with a factor of 0.1.}
+\end{figure}
+
+Following the comparison of Figure (\ref{fig:OLS_franke_1}) and (\ref{fig:OLS_franke_2}), comparing the two confidence intervals reveals that as the added Gaussian noise is increased in size, the confidence intervals for the predictors increase as well. This can be seen especially for the predictors with some variability for the $0.05$ noise factor case. Thus, as we increase the Gaussian noise added to the Franke Function, our predictors become less uncertain, which in turn could result in less precise model predictions. 
+
 
 %\begin{figure}
 %  \centering
@@ -240,7 +260,37 @@ By inspecting Figure (\ref{fig:OLS_franke_1}), we can see that there are no visu
 
 \section*{Exercise 2}
 \subsection*{Some words on bootstrapping}
+As described in the preceding task, we split our data into several subsets used for different purposes. The overall objective is to train a model on a given subset and then measure how well it performs on a new unseen data set. *Figure 3* illustrates the results of this method, where the average prediction error is plotted against the model complexity. However, a dilemma that may emerge from this approach is that our data only represents a sample from an unknown distribution. We run the risk of measuring a predicted error that deviates from the actual probability by iterating through our data points only once. 
 
+Therefore, we impose resampling methods on our data to produce a more realistic estimate of the error. The following algorithm will demonstrate how *bootstrap* is performed to achieve this\cite{ref_forelesning}:
+
+We have some data: 
+
+$$D = [x_1,x_2,...,x_n]$$
+
+(I) A new sample is then drawn. This dataset will have the same dimension as D, but as it is drawn with replacements, they will differ from eachother as the latter has a high probability of drawing the same sample mulitple times:
+
+$$X^* = x_{1}^{*}, x_{2}^{*}, ... ,x_{n}^{*}$$
+
+(II)This sample is then used to create new set of predictors: 
+\[
+  \bm{\hat{\beta}}^* = \left(\bm{X}^\text{*T}\bm{X}^*\right)^{-1}\bm{X}^\text{T*}\bm{y}
+\]
+
+(III)which in turn is used to predict new values:
+
+$$\tilde{y}^* = \bm{X}\bm{\hat{\beta}}$$.
+
+(IV)We then compute the error in our predictions:
+\[
+  \text{MSE}(\boldsymbol{y},\boldsymbol{\tilde{y}^*}) = \frac{1}{n}
+  \sum_{i=0}^{n-1}(y_i-\tilde{y}^{*}_i)^2
+\]
+
+Step I-IV is then repeated $B$ times, while keeping track of each sample MSE.
+
+
+\subsection*{The bias-variance trade-off analysis}
 
 Moving on to the bias-variance trade-off analysis, we start off by showing that 
 
@@ -307,7 +357,7 @@ to see that the final term in (\ref{eq:varbi}) is equal to the noise. Thus we ha
 
 The final expression consists of three terms. The first term is a sum of the squared bias, the second term is the variance and the final term is a constant noise term. The sum of squared bias and variance make up the mean square error of our model. \cite{Hastie2009} 
 
-The bias component of the mean square error measures the difference from the true mean to the desired regression model. As function of model complexity, the bias will decrease as complexity increases. The second term, the variance, gives a measurement of the variation of the model values around their average value. The variance will increase with model complexity. The constant noise term $\sigma^2$ is an irreducible error, and as such does not contribute when analysing the bias-variance tradeoff.
+The bias component of the mean square error measures the difference from the true mean to the desired regression model. As function of model complexity, the bias will decrease as complexity increases. The second term, the variance, gives a measurement of the variation of the model values around their average value. The variance will increase with model complexity. The constant noise term $\sigma^2$ is an irreducible error which can only be reduced by cleaning up the data beforehand. \cite{Geron2019}. As the irreducible error is out of our control, it does not contribute when analyzing the bias-variance tradeoff. 
 
 The bias-variance tradeoff can be used as a method for model selection. As has been alluded to in the previous paragraph, the variance is inverse proportional to the bias. As such, there is a trade-off between bias and variance. As the bias-variance is directly related to the mean square error for both the training data but also test and production data used for making new predictions. When selecting a model we wish to balance and minimize both quantities, as that leads to the model with the best predicitve capabilities. \cite{Bishop2016}
 
@@ -333,6 +383,102 @@ Lastly, it should be noted that the bias-variance tradeoff measuremnet is perfor
   \csvautobooktabular{data/report_data/redge_reg_lambda_-1.1.csv}
   \label{data: Ridge_best_fit}
 \end{center}
+
+\section*{Exercise 3}
+In this project, an infinite number of data points could easily be created by simply adjusting the number of *n* decimals created in the span [0,1] for x and y. Setting a large *n* could then, in turn, yield a test set of substantial size, which ables the prediction of estimated average test error with statistical certainty. 
+
+However, for real-life purposes, this is rarely the case. More often than not, the challenges related to the validation of models in question lies in the limitations of available data.  A widely used approach for combating these issues is implementing cross-validation, which will ensure a better approximation of the generalization error. 
+
+
+
+\section*{Exercise 4}
+Throughout Exercise 1 - 3, we have studied function fitting using the Ordinary Least Squares regression. When comparing models, we have plotted the test error as a function of the model complexity and chosen a model based on the bias-variance tradeoff. The bias-variance tradeoff has also been studied in light of resampling techniques such as the bootstrap and k-fold cross-validation. As we have seen when interpreting the result of the resampling, an increased degree of freedom for the model will make the model more prone to overfit.
+
+Instead of reducing the degree of freedom of a model by limiting it's order, we will in this section look at a different approach for model selection through the introduction of a regularization parameter $\lambda$. With the regularization parameter, individual predictors in the model can be restrained without resorting to reducing the overall order of the model.
+
+Ridge regression is a regression model where the weights are constrained. \cite{Geron2019} This is done by adding a regularization term to the cost function, such that the function we are to optimize becomes
+\[
+  C\left(\bm{X},\bm{\beta}\right) = \left\{\left(\bm{y}-\bm{X}\bm{\beta}\right)^\text{T}\left(\bm{y}-\bm{X}\bm{\beta}\right)\right\}+\lambda\bm{\beta}^\text{T}\bm{\beta}
+\]
+Taking the derivatives of this function in terms of beta returns the closed form solution for the optimal $\bm{\beta}$
+\[
+  \bm{\hat{\beta}} = \left(\bm{X}^\text{T}\bm{X} + \bm{\lambda}\bm{I}\right)^{-1}\bm{X}^\text{T}\bm{y}
+\]
+As for Ordinary Least Squares regression, by using the closed form solution for the predictors we can predict new values $\tilde{y}$ as $\tilde{y} = \bm{X}\bm{\hat{\beta}}$.
+
+\subsection*{The No Free Lunch Theorem}
+As further motivation as to why we want to apply Ridge (and further on also Lasso) regression for fitting the Franke Function is due to the implications of the No Free Lunch Theorem. The theorem states that for any two learning models A and B, there are just as many situations where algorithm is A is superior to algorithm B as vice versa. \cite{Wolpert1996} The theorem implies that there are no sets of model that are guaranteed to fit a problem better than others. As a result of the theorem, regardless of the data being fitted, different models have to be individually evaluated for the given task at hand.
+
+As there are no universally best learning algorithm for fitting the problem at hand, we expand our analysis of Fitting the Franke Function in light the No Free Lunch Theorem to also include an assessment of Ridge and Lasso Regression. Both models handles feature selection through the introduction of the regularization parameter lambda, thus potentially achieving a lower MSE than for Ordinary Least Squares. Introducing several models also follows the implications of the Free Lunch Theorem, notably that we have to fine tune and assess our models to perform well on the current problem. \cite{Goodfellow2016}
+
+\subsection*{Weight Decay}
+The Cost function for Ridge regression can be seen as th≈e Cost function for Ordinary Least Squares with an added weight decay term $\lambda\bm{\beta}^\text{T}\bm{\beta}$. The parameter $\lambda$ is known as a hyperparameter, i.e. the parameter can be controlled before fitting the model and changes how the model behaves during fitting and predicting. \cite{Goodfellow2016} Moreover, $\lambda \geq 0$, such that $\lambda$ close to $0$ implies Ordinary Least Squares and $\lambda$ large implies that the predictors are close to $0$. Hence weight decay, as the hyperparamter can be tuned to enforce some predictors (weights) to be excluded from the model fit.
+
+For this Exercise, we will analyse the effect of the weight decay when fitting the Franke Function using Ridge regression. We will analyse the polynomial of optimal degree that we determined in the previous exercises through assessing the bias-variance tradeoff for an increased model complexity. Firstly with the bootstrap resampling technique, then compared the bootstrap MSE with what was obtained using the k-fold cross validation. With the model complexity  
+
+
+\section*{Exercise 6}
+The main goal of exercise 6 is to analyze the performance of our models on real digital terrain data using the approach conducted in previous exercises 1-5. Before commencing model analysis in exercise 6, we had to understand the terrain data's nature and how it differs from the constructed franke function dataset. 
+To recap on the franke function; one must decide on the number of points for x and y at a certain range, construct a meshgrid of x and y, then z is created based on the franke function. For the franke function we randomly and uniformly chose $x,y$ such that $\forall x,y  \in{[0.0,1.0]}$.
+Comparing the franke function to the terrain data, we get the z variable from the terrain image itself. The values of the z variable in the terrain data represent height or depth similarly as for the franke function. However, the height or depth in the terrain data image represents
+the real height in the actual topographical terrain having an entirely different scale comparing the constructed range between 0-1 of the franke function. Looking at the image data, the x and y variables must be constructed as a meshgrid spanning the entire range of all x and y pixel positions within the terrain image. 
+Since the range of x and y is determined by the span of pixel positions corresponding to the image width and height, we must scale both the x and y variables from the terrain data. The terrain input data utilized is of dimension 3601x1801, inducing 6485401 data points for the entire dataset. The terrain image is therefore not quadratic meaning the range of x and y is not equal. 
+This motivates scaling of x and y to prevent one feature, by its magnitude, from dominating over the other. One must avoid the model to favor features by their magnitude since the contribution from features of smaller magnitude can be equally strong or important. 
+Hence, the x-direction in real terrain is equally important as the y-direction even though the higher end of x is at 3600 and the higher end of y is at 1800. Another approach to level out the importance of the x and y variable (features) is to resize the image into a quadratic form where image height equals image width. 
+However, resizing the entire image into a quadratic form will transform and distort the nature of the topographical terrain we try to fit. We solved this by first resizing while keeping the scale factor between width and height to make the number of data points feasible to work with. While keeping the terrain structures intact, we rescaled the image down to 20\% of its original size , figure \ref{fig:terrain_resized}.
+Moreover, we created 8 patches of image data from the resized images where each patch being quadratic of dimension 180x180 (32400 data points), figure \ref{fig:terrain_patches}. This preprocessing serves the purpose of feeding the model with only one patch at a time, making the problem more digestible for obtaining a good fit concering subproblems instead. 
+Another difference separating the terrain data from the synthetically created franke function data is that noise is incorporated within the image itself. For the franke function, we had to add noise in order for us to analyze the robustness of the models and to which degree the models were generalized. 
+However, having control over the influence and magnitude of the noise is a luxury situation in real data situations, and for the real terrain image data, the noise stems from sensors and the assembly or construction of the image. 
+
+After investagating the different patches we concluded on mainy focusing on two different patches shown in figure \ref{fig:terrain_patches_focus} 
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.75]{figures/EX6_terrain_data_resized.pdf}
+  \caption{Terrain data resized}
+  \label{fig:terrain_resized}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain1 patches.pdf} }}%
+  \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain2 patches.pdf} }}%
+  \caption{Terrain patches}%
+  \label{fig:terrain_patches}%
+\end{figure}
+
+\begin{figure}
+  \centering
+  \subfloat{{\includegraphics[width=14cm]{figures/EX6_terrain_patch_to_fit_2D.pdf} }}%
+  \subfloat{{\includegraphics[width=15cm]{figures/EX6_terrain_patch_to_fit_3D.pdf} }}%
+  \caption{Chosen terrain patches}%
+  \label{fig:terrain_patches_focus}%
+\end{figure}
+
+
+\subsection*{Exercise 6.1 (Exercise 1 approach)}
+In this task we conducted a OLS fit on the the terrain1 patch using the same appraoch as done in exercise1.
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.75]{figures/EX6_EX1_terrain_patch_OLS_evaluate_fit.pdf}
+  \caption{Model complexity vs prediction error using OLS}
+  \label{fig:EX6_1_OLS_fit}
+\end{figure}
+
+\begin{table}
+  \centering
+  \csvautobooktabular{data/report_data/EX6_EX1_OLS_beta_error_degree4.csv}
+  \caption{Coefficient summary of OLS fit}
+  \label{data:EX6_1_OLS_betas}
+\end{table}
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.9]{figures/EX6_EX1_OLS_beta_error_degree4.pdf}
+  \caption{Plot of OLS coefficients including standard error}
+  \label{fig:EX6_1_OLS_betas_plot}
+\end{figure}
 
 
 \section*{Appendix\label{sec:A}}
