--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage{booktabs}
 \usepackage{multicol}
 \usepackage[margin=3cm]{geometry}
+\usepackage{subfig}
 
 \usepackage{listings}
 \lstset{
@@ -349,15 +350,15 @@ Lastly, it should be noted that the bias-variance tradeoff measuremnet is perfor
 %  \label{fig: Ridge_best_fit_2}
 %\end{figure}
 
-\begin{center}
-  \csvautobooktabular{data/report_data/redge_reg_lambda_-1.1.csv}
-  \label{data: Ridge_best_fit}
-\end{center}
+%\begin{center}
+%  \csvautobooktabular{data/report_data/redge_reg_lambda_-1.1.csv}
+%  \label{data: Ridge_best_fit}
+%\end{center}
 
 \section*{Exercise 4}
 Throughout Exercise 1 - 3, we have studied function fitting using the Ordinary Least Squares regression. When comparing models, we have plotted the test error as a function of the model complexity and chosen a model based on the bias-variance tradeoff. The bias-variance tradeoff has also been studied in light of resampling techniques such as the bootstrap and k-fold cross-validation. As we have seen when interpreting the result of the resampling, an increased degree of freedom for the model will make the model more prone to overfit.
 
-Instead of reducing the degree of freedom of a model by limiting it's order, we will in this section look at a different approach for model selection through the introduction of a regularization parameter $\lambda$. With the regularization parameter, individual predictors in the model can be restrained without resorting to reducing the overall order of the model.
+Instead of reducing the degree of freedom of a model by limiting it's order, we will in this section look at a different approach for model selection through the introduction of a regularization parameter $\lambda$. With the regularization parameter, individual predictors in the model can be restrained without resorting to reducing the overall order of the model. The regularization term will punish the predictors such that they stray from reaching large values, adding another method to control overfitting. \cite{Bishop2016}
 
 Ridge regression is a regression model where the weights are constrained. \cite{Geron2019} This is done by adding a regularization term to the cost function, such that the function we are to optimize becomes
 \[
@@ -379,6 +380,8 @@ The Cost function for Ridge regression can be seen as the Cost function for Ordi
 
 For this Exercise, we will analyse the effect of the weight decay when fitting the Franke Function using Ridge regression. We will analyse the polynomial of optimal degree that we determined in the previous exercises through assessing the bias-variance tradeoff for an increased model complexity. Firstly with the bootstrap resampling technique, then compared the bootstrap MSE with what was obtained using the k-fold cross validation. With the model complexity  
 
+\subsection*{Implementing Ridge regression}
+Our implementation of Ridge regression follow closely that of Ordinary Least Squares, but with an input parameter $\lambda$ determining the strength of the regularization term. Furthermore, the implementation differs as the normal equation for computing the optimal predictors have changed to $\bm{\hat{\beta}} = \left(\bm{X}^\text{T}\bm{X} + \bm{\lambda}\bm{I}\right)^{-1}\bm{X}^\text{T}\bm{y}$. 
 
 \section*{Exercise 6}
 The main goal of exercise 6 is to analyze the performance of our models on real digital terrain data using the approach conducted in previous exercises 1-5. Before commencing model analysis in exercise 6, we had to understand the terrain data's nature and how it differs from the constructed franke function dataset. 
