adds to latex in ex2 and 3

--- a/main.tex
+++ b/main.tex
@@ -390,6 +390,14 @@ Lastly, it should be noted that the bias-variance tradeoff measuremnet is perfor
 %  \label{data: Ridge_best_fit}
 %\end{center}
 
+\subsection*{Bias-variance trade-off as function of model complexity}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.75]{figures/EX2_model_complexity_using_bootstrap_function.pdf}
+  \caption{\label{fig:?}bias and variance trade-off as function of model complexity}
+\end{figure}
+
 \section*{Exercise 3}
 In this project, an infinite number of data points could easily be created by simply adjusting the number of *n* decimals created in the span [0,1] for x and y. Setting a large *n* could then, in turn, yield a test set of substantial size, which ables the prediction of estimated average test error with statistical certainty. 
 
