--- a/main.tex
+++ b/main.tex
@@ -453,6 +453,7 @@ After investagating the different patches we concluded on mainy focusing on two 
 \begin{figure}
   \centering
   \subfloat{{\includegraphics[width=14cm]{figures/EX6_terrain_patch_to_fit_2D.pdf} }}%
+  \\
   \subfloat{{\includegraphics[width=15cm]{figures/EX6_terrain_patch_to_fit_3D.pdf} }}%
   \caption{Chosen terrain patches}%
   \label{fig:terrain_patches_focus}%
@@ -460,7 +461,8 @@ After investagating the different patches we concluded on mainy focusing on two 
 
 
 \subsection*{Exercise 6.1 (Exercise 1 approach)}
-In this task we conducted a OLS fit on the the terrain1 patch using the same appraoch as done in exercise1.
+In this task we conducted a OLS fit on the the terrain1 patch using similar appraoch as done in exercise1.
+We scale both target and input data using standard scaler. Looking at figure \ref{fig:EX6_1_OLS_fit} 
 
 \begin{figure}
   \centering
