--- a/main.tex
+++ b/main.tex
@@ -457,7 +457,7 @@ After investagating the different patches we concluded on mainy focusing on two 
 
 \begin{figure}
   \centering
-  \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain1 patches.pdf} }}%
+  \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain1s patches.pdf} }}%
   \subfloat{{\includegraphics[width=7cm]{figures/EX6_Terrain2 patches.pdf} }}%
   \caption{Terrain patches}%
   \label{fig:terrain_patches}%
