--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -41,35 +41,31 @@
     "\n",
     "#generate some data: \n",
     "np.random.seed(SEED_VALUE)\n",
-    "n = 15\n",
+    "n = 22\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
-    "t = FrankeFunction(x, y) + noise_factor(n, factor=0.1)\n",
+    "t = FrankeFunction(x, y) + noise_factor(n, factor=0.3)\n",
     "ndegrees = 14\n",
     "\n",
     "boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, ndegrees, n - int(n/5), OLS())\n",
     "boot_strp_std = np.sqrt(boot_strp_variance)\n",
     "\n",
     "\n",
-    "for degree in range(3,7):\n",
+    "for degree in range(3,14):\n",
     "    X = create_X(x,y,degree)\n",
     "\n",
     "\n",
     "    mean_folds_error = np.zeros(6)\n",
-    "    mean_folds_error_sk = np.zeros(6)\n",
     "    mse_std_arr = np.zeros(6)\n",
     "    for folds in range(5,11):\n",
-    "        #create LinearRegression model object from SK to use in sk.cross_val_score\n",
-    "        sk_model = linear_model.LinearRegression()\n",
-    "        #Get scores from SK crossval:\n",
-    "        sk_scores = cross_val_score(sk_model, X, t.ravel(), cv=folds, scoring = \"neg_mean_squared_error\")\n",
-    "        implemented_scores = cross_val(k = folds, model = \"OLS\", X = X, z = t)\n",
+    "     \n",
+    "        implemented_scores = cross_val(k = folds, model = \"OLS\", X = X, z = t, shuffle=True)\n",
     "        mean_folds_error[folds-5] = np.mean(implemented_scores)\n",
     "        mse_std_arr[folds-5] = np.std(implemented_scores)\n",
     "        \n",
     "        \n",
-    "    plt.plot(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree],\"o--\", label =\"Mean MSE bootstrap with STD\")\n",
+    "    plt.plot(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree],\"--\", label =\"Mean MSE bootstrap with STD\")\n",
     "    plt.fill_between(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree]-boot_strp_std[degree],\n",
     "                     np.ones(6)*boot_strp_MSE_test[degree]+boot_strp_std[degree], alpha = 0.2 )\n",
     "    plt.plot(np.arange(5,11), mean_folds_error, \"o--\",  label = \"Mean MSE CV\")\n",
@@ -77,10 +73,12 @@
     "    plt.title(f\"Model complexity: {degree} degrees\")\n",
     "    plt.xlabel(\"K-fold\")\n",
     "    plt.ylabel(\"MSE\")\n",
-    "    plt.ylim(0,5)\n",
+    "    #plt.ylim(0,2)\n",
     "    plt.xticks(np.arange(5,11))\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
+    "    plt.savefig(f\"{REPORT_FIGURES}{EX3}mse_cv_boot{degree}.pdf\")\n",
+    "\n",
     "    plt.show()"
    ],
    "outputs": [],
@@ -126,6 +124,7 @@
     "    sk_scores = cross_val_score(sk_model, X, t.ravel(), cv=folds, scoring = \"neg_mean_squared_error\")\n",
     "\n",
     "    implemented_scores = cross_val(k = folds, model = \"OLS\", X = X, z = t)\n",
+    "    \n",
     "    sk_scores = sk_scores*-1\n",
     "    mean_folds_error[folds-5] = np.mean(implemented_scores)\n",
     "    mean_folds_error_sk[folds-5] = np.mean(sk_scores)\n",
@@ -143,13 +142,6 @@
     "\n",
     "plt.show()"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   },
