done a lot of changes (bad commit message)

--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -55,19 +55,114 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#generate some data: \n",
+    "#generate some data:\n",
     "np.random.seed(SEED_VALUE)\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
     "t_nonoise = FrankeFunction(x, y)\n",
-    "t = t_nonoise + noise_factor(n, factor=0.1)\n",
-    "degree = 6\n",
+    "t = t_nonoise + noise_factor(n, factor=0.2)\n",
+    "degree = 12\n",
     "min_lambda = -9\n",
-    "max_lambda = 4 \n",
+    "max_lambda = 4\n",
     "nlambdas = 500\n",
     "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "test_mse = np.zeros((degree, nlambdas))\n",
+    "train_mse = np.zeros_like(test_mse)\n",
+    "model_list = np.empty_like(test_mse, dtype=object)\n",
+    "optimal_deg = 0\n",
+    "optimal_lmb = 0\n",
+    "lambda_degree = 0\n",
+    "best_mse = np.inf\n",
+    "\n",
+    "for deg in range(1, degree+1):\n",
+    "    for lmb in range(len(lambdas)):\n",
+    "\n",
+    "        X = create_X(x,y,n=deg)\n",
+    "\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), scale_X=True, skip_intercept=True)\n",
+    "\n",
+    "        model = RidgeRegression(lambdas[lmb])\n",
+    "        z_hat_train = model.fit(X_train, z_train)\n",
+    "        z_hat_test = model.predict(X_test)\n",
+    "\n",
+    "        test_mse[deg-1,lmb] = MSE(z_test, z_hat_test)\n",
+    "        train_mse[deg-1, lmb] = MSE(z_train, z_hat_train)\n",
+    "        model_list[deg-1,lmb] = model\n",
+    "        \n",
+    "        if test_mse[deg-1,lmb] < best_mse:\n",
+    "            best_mse = test_mse[deg-1, lmb]\n",
+    "            optimal_deg = deg\n",
+    "            optimal_lmb = lambdas[lmb]\n",
+    "            lambda_degree = lmb\n",
+    "\n",
+    "print(best_mse)\n",
+    "print(optimal_lmb)\n",
+    "print(optimal_deg)\n",
+    "print(train_mse[deg-1, lmb])\n",
+    "optimal_model = model_list[deg-1, lambda_degree]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Surface-plot of optimal lambda"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "%matplotlib\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax.title.set_text(\"Plot of the Search Landscape\")\n",
+    "ax.set_xlabel(\"Degree\"); ax.set_ylabel(\"Lambda\"); ax.set_zlabel(\"MSE\")\n",
+    "\n",
+    "degs, lambs = np.meshgrid(range(degree), range(nlambdas))\n",
+    "print(degs.shape)\n",
+    "print(lambs.shape)\n",
+    "print(test_mse.shape)\n",
+    "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
+    "ax.scatter(5, 0, best_mse, c='y', marker='*', s=2000)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Betaplot showing effect of ridge"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "summaries_df = pd.DataFrame()\n",
+    "\n",
+    "for lmb in lambdas:\n",
+    "    X = create_X(x,y,n=4)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), scale_X=True, skip_intercept=True)\n",
+    "    model = RidgeRegression(lmb)\n",
+    "    model.fit(X_train, z_train)\n",
+    "    summary_df = model.summary()\n",
+    "    summaries_df = pd.concat([summaries_df, summary_df], axis=0)\n",
+    "\n",
+    "fig = plot_beta_errors_for_lambdas(summaries_df, 4)"
    ],
    "outputs": [],
    "metadata": {}
@@ -86,10 +181,9 @@
     "# NO NOISE\n",
     "\n",
     "X = create_X(x,y,degree)\n",
-    "X_train, X_test, t_train, t_test = prepare_data(X,t_nonoise.ravel(), scale_X=True)\n",
+    "X_train, X_test, t_train, t_test = prepare_data(X,t_nonoise.ravel(), scale_X=True, skip_intercept=True)\n",
     "\n",
-    "X_train = X_train[:,1:]\n",
-    "X_test = X_test[:,1:]\n",
+    "print(X_train.shape)\n",
     "\n",
     "MSERidgePredict = np.zeros(nlambdas)\n",
     "MSEOurRidge = np.zeros(nlambdas)\n",
@@ -105,12 +199,12 @@
     "\n",
     "    # our Ridge\n",
     "    model = RidgeRegression(lmb)\n",
-    "    model.fit(X_train, t_train, SVDfit = False)\n",
+    "    model.fit(X_train, t_train)\n",
     "    tpredictOur = model.predict(X_test)\n",
     "    MSEOurRidge[i] = MSE(t_test, tpredictOur)\n",
     "\n",
     "plt.figure()\n",
-    "plt.plot(np.log10(lambdas), MSERidgePredict, 'g--', label = 'MSE SL Ridge Test')\n",
+    "plt.plot(np.log10(lambdas), MSERidgePredict, 'g', label = 'MSE SL Ridge Test')\n",
     "plt.plot(np.log10(lambdas), MSEOurRidge, 'r--', label = \"MSE Our Ridge Test\")\n",
     "plt.xlabel('log10(lambda)')\n",
     "plt.ylabel('MSE')\n",
@@ -137,7 +231,7 @@
     "print(gridsearch)\n",
     "ypredictRidge = gridsearch.predict(X_test)\n",
     "# summarize the results of the grid search\n",
-    "print(f\"Best estimated lambda-value: {gridsearch.best_estimator_.alpha}\")\n",
+    "print(f\"Best estimated lambda-value: {np.log10(gridsearch.best_estimator_.alpha)}\")\n",
     "print(f\"MSE score: {MSE(t_test,ypredictRidge)}\")\n",
     "print(f\"R2 score: {R2(t_test,ypredictRidge)}\")"
    ],
@@ -151,10 +245,10 @@
     "# NOISE and OLS for comparison\n",
     "\n",
     "X = create_X(x,y,degree)\n",
-    "X_train, X_test, t_train, t_test = prepare_data(X,t.ravel(), scale_X=True)\n",
+    "X_train, X_test, t_train, t_test = prepare_data(X,t.ravel(), scale_X=True, skip_intercept=True)\n",
     "\n",
-    "X_train = X_train[:,1:]\n",
-    "X_test = X_test[:,1:]\n",
+    "#X_train = X_train[:,1:]\n",
+    "#X_test = X_test[:,1:]\n",
     "\n",
     "nlambdas = 500\n",
     "MSERidgePredict = np.zeros(nlambdas)\n",
@@ -172,23 +266,74 @@
     "\n",
     "    # our Ridge\n",
     "    model = RidgeRegression(lmb)\n",
-    "    model.fit(X_train, t_train, SVDfit = False)\n",
+    "    model.fit(X_train, t_train)\n",
     "    tpredictOur = model.predict(X_test)\n",
     "    MSEOurRidge[i] = MSE(t_test, tpredictOur)\n",
     "\n",
     "    # OLS :)\n",
+    "    \"\"\"\n",
     "    ols = OLS()\n",
     "    ols.fit(X_train, t_train)\n",
     "    olspredict = ols.predict(X_test)\n",
     "    MSEols[i] = MSE(t_test, olspredict)\n",
+    "    \"\"\"\n",
     "\n",
     "plt.figure()\n",
     "plt.plot(np.log10(lambdas), MSERidgePredict, 'g', label = 'MSE SL Ridge Test')\n",
     "plt.plot(np.log10(lambdas), MSEOurRidge, 'r--', label = \"MSE Our Ridge Test\")\n",
-    "plt.plot(np.log10(lambdas), MSEols, 'b--', label = \"MSE Our OLS Test\")\n",
+    "#plt.plot(np.log10(lambdas), MSEols, 'b--', label = \"MSE Our OLS Test\")\n",
     "plt.xlabel('log10(lambda)')\n",
     "plt.ylabel('MSE')\n",
     "plt.legend()\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Bootstrapping\n",
+    "using lambda optimal equal to -9, for different degrees"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "np.random.seed(SEED_VALUE)\n",
+    "maxdegree = 13\n",
+    "n_bootstraps = 40\n",
+    "lmb = np.log10(1e-9)\n",
+    "n = 20\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "x,y = np.meshgrid(x,y)\n",
+    "z = FrankeFunction(x,y) + noise_factor(n, factor=0.05)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "polydegree = np.arange(1, maxdegree+1)\n",
+    "MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, RidgeRegression(lmb), scale_X=True, skip_intercept=True)\n",
+    "\n",
+    "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\n",
+    "plt.plot(polydegree, bias,\"b--\", label='bias')\n",
+    "plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
+    "#plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "\n",
+    "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "plt.ylabel(\"Prediction Error - MSE\")\n",
+    "plt.xticks(polydegree)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX4}ridge_complexity_using_bootstrap_function.pdf\")\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -205,7 +350,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "\n",
+    "\"\"\"\n",
     "for lmb in lambdas:\n",
     "    boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, degree, 20, RidgeRegression(lmb))\n",
     "    boot_strp_std = np.sqrt(boot_strp_variance)\n",
@@ -250,7 +395,8 @@
     "        plt.xticks(np.arange(5,11))\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "\"\"\""
    ],
    "outputs": [],
    "metadata": {}
@@ -266,6 +412,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "\"\"\"\n",
     "optimal_degree = 6\n",
     "min_lambda = -7 \n",
     "max_lambda = -3\n",
@@ -291,7 +438,8 @@
     "fig.savefig(f\"{REPORT_FIGURES}{EX6_4}Ridge_beta_SE_for_lambdas.pdf\")\n",
     "\n",
     "fig = plot_beta_CI_for_lambdas(summaries_df, optimal_degree)\n",
-    "fig.savefig(f\"{REPORT_FIGURES}{EX6_4}Ridge_beta_CI_for_lambdas.pdf\")"
+    "fig.savefig(f\"{REPORT_FIGURES}{EX6_4}Ridge_beta_CI_for_lambdas.pdf\")\n",
+    "\"\"\""
    ],
    "outputs": [],
    "metadata": {}
