--- a/code/Exercise5.ipynb
+++ b/code/Exercise5.ipynb
@@ -56,12 +56,12 @@
    "source": [
     "np.random.seed(SEED_VALUE)\n",
     "maxdegree = 12\n",
-    "degree = 9 # Chosen as the optimal degree from the bias-variance tentative\n",
-    "n = 10000\n",
+    "degree = 6 # Chosen as the optimal degree from the bias-variance tentative\n",
+    "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "X = create_X(x,y, n = degree)\n",
-    "z = FrankeFunction(x, y) + noise_factor(n, factor=0.1)"
+    "z = FrankeFunction(x, y) + noise_factor(n, factor=0.2)"
    ],
    "outputs": [],
    "metadata": {}
@@ -77,8 +77,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "nbf_lambdas = 20\n",
-    "lambdas = np.logspace(-2, 1, nbf_lambdas)\n",
+    "nbf_lambdas = 13\n",
+    "lambdas = np.logspace(-12, 1, nbf_lambdas)\n",
     "z_train_lasso = pd.DataFrame()\n",
     "z_hat_train_lasso = pd.DataFrame()\n",
     "z_test_lasso = pd.DataFrame()\n",
@@ -94,7 +94,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X = True, random_state=SEED_VALUE)\n",
+    "X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X = True, skip_intercept=True, random_state=SEED_VALUE)\n",
+    "\n",
+    "#X_train[:,0] = 1\n",
+    "#X_test[:,0] = 1\n",
     "\n",
     "for i in tqdm(range(len(lambdas)), f\"Looping through lambdas up to {nbf_lambdas}: \"):\n",
     "    clf = lm.Lasso(lambdas[i], fit_intercept=False)\n",
@@ -176,6 +179,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "\"\"\"\n",
     "nlambdas = 10\n",
     "n_bootstraps = 100\n",
     "maxdegree = 12\n",
@@ -229,7 +233,8 @@
     "\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "\"\"\""
    ],
    "outputs": [],
    "metadata": {}
